--- a/python_snippets/HMEQ_prod_scoring_batch.ipynb
+++ b/python_snippets/HMEQ_prod_scoring_batch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,24 +28,24 @@
      "text": [
       "NOTE: 'Public' is now the active caslib.\n",
       "NOTE: Action 'sessionProp.setSessOpt' used (Total process time):\n",
-      "NOTE:       real time               0.000275 seconds\n",
-      "NOTE:       cpu time                0.000263 seconds (95.64%)\n",
+      "NOTE:       real time               0.000251 seconds\n",
+      "NOTE:       cpu time                0.000233 seconds (92.83%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
       "NOTE:       total memory            62.67G\n",
-      "NOTE:       memory                  280.44K (0.00%)\n"
+      "NOTE:       memory                  262.06K (0.00%)\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<div class=\"cas-output-area\"></div>\n",
-       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.000275s</span> &#183; <span class=\"cas-sys\">sys 0.000263s</span> &#183; <span class=\"cas-memory\">mem 0.274MB</span></small></p>"
+       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.000251s</span> &#183; <span class=\"cas-user\">user 0.000174s</span> &#183; <span class=\"cas-sys\">sys 5.9e-05s</span> &#183; <span class=\"cas-memory\">mem 0.256MB</span></small></p>"
       ],
       "text/plain": [
-       "+ Elapsed: 0.000275s, sys: 0.000263s, mem: 0.274mb"
+       "+ Elapsed: 0.000251s, user: 0.000174s, sys: 5.9e-05s, mem: 0.256mb"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,175 +85,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th title=\"\"></th>\n",
-       "      <th title=\"BAD\">BAD</th>\n",
-       "      <th title=\"LOAN\">LOAN</th>\n",
-       "      <th title=\"MORTDUE\">MORTDUE</th>\n",
-       "      <th title=\"VALUE\">VALUE</th>\n",
-       "      <th title=\"YOJ\">YOJ</th>\n",
-       "      <th title=\"DEROG\">DEROG</th>\n",
-       "      <th title=\"DELINQ\">DELINQ</th>\n",
-       "      <th title=\"CLAGE\">CLAGE</th>\n",
-       "      <th title=\"NINQ\">NINQ</th>\n",
-       "      <th title=\"CLNO\">CLNO</th>\n",
-       "      <th title=\"DEBTINC\">DEBTINC</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>count</td>\n",
-       "      <td>3579.000000</td>\n",
-       "      <td>3579.000000</td>\n",
-       "      <td>3264.000000</td>\n",
-       "      <td>3509.000000</td>\n",
-       "      <td>3261.000000</td>\n",
-       "      <td>3147.000000</td>\n",
-       "      <td>3227.000000</td>\n",
-       "      <td>3397.000000</td>\n",
-       "      <td>3261.000000</td>\n",
-       "      <td>3448.000000</td>\n",
-       "      <td>2820.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>mean</td>\n",
-       "      <td>0.199218</td>\n",
-       "      <td>18868.426935</td>\n",
-       "      <td>73675.716621</td>\n",
-       "      <td>101230.278344</td>\n",
-       "      <td>8.969549</td>\n",
-       "      <td>0.270734</td>\n",
-       "      <td>0.449644</td>\n",
-       "      <td>180.535984</td>\n",
-       "      <td>1.195339</td>\n",
-       "      <td>21.348318</td>\n",
-       "      <td>33.983545</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>std</td>\n",
-       "      <td>0.399468</td>\n",
-       "      <td>11545.720138</td>\n",
-       "      <td>44788.151184</td>\n",
-       "      <td>56904.744045</td>\n",
-       "      <td>7.610240</td>\n",
-       "      <td>0.901601</td>\n",
-       "      <td>1.148946</td>\n",
-       "      <td>85.863542</td>\n",
-       "      <td>1.733694</td>\n",
-       "      <td>10.194862</td>\n",
-       "      <td>8.836596</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>min</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1100.000000</td>\n",
-       "      <td>2063.000000</td>\n",
-       "      <td>8000.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.028931</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>25%</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>11200.000000</td>\n",
-       "      <td>46414.500000</td>\n",
-       "      <td>65912.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>115.075948</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>14.000000</td>\n",
-       "      <td>29.323507</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>50%</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>16500.000000</td>\n",
-       "      <td>65413.000000</td>\n",
-       "      <td>89553.000000</td>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>173.792507</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>34.938337</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>75%</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>23400.000000</td>\n",
-       "      <td>91002.000000</td>\n",
-       "      <td>119053.000000</td>\n",
-       "      <td>13.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>233.397273</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>26.000000</td>\n",
-       "      <td>39.089087</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>max</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>89900.000000</td>\n",
-       "      <td>399550.000000</td>\n",
-       "      <td>854114.000000</td>\n",
-       "      <td>41.000000</td>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>15.000000</td>\n",
-       "      <td>1154.633333</td>\n",
-       "      <td>17.000000</td>\n",
-       "      <td>71.000000</td>\n",
-       "      <td>203.312149</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               BAD          LOAN        MORTDUE          VALUE          YOJ        DEROG       DELINQ        CLAGE         NINQ         CLNO      DEBTINC\n",
-       "count  3579.000000   3579.000000    3264.000000    3509.000000  3261.000000  3147.000000  3227.000000  3397.000000  3261.000000  3448.000000  2820.000000\n",
-       "mean      0.199218  18868.426935   73675.716621  101230.278344     8.969549     0.270734     0.449644   180.535984     1.195339    21.348318    33.983545\n",
-       "std       0.399468  11545.720138   44788.151184   56904.744045     7.610240     0.901601     1.148946    85.863542     1.733694    10.194862     8.836596\n",
-       "min       0.000000   1100.000000    2063.000000    8000.000000     0.000000     0.000000     0.000000     0.000000     0.000000     0.000000     1.028931\n",
-       "25%       0.000000  11200.000000   46414.500000   65912.000000     3.000000     0.000000     0.000000   115.075948     0.000000    14.000000    29.323507\n",
-       "50%       0.000000  16500.000000   65413.000000   89553.000000     7.000000     0.000000     0.000000   173.792507     1.000000    20.000000    34.938337\n",
-       "75%       0.000000  23400.000000   91002.000000  119053.000000    13.000000     0.000000     0.000000   233.397273     2.000000    26.000000    39.089087\n",
-       "max       1.000000  89900.000000  399550.000000  854114.000000    41.000000     9.000000    15.000000  1154.633333    17.000000    71.000000   203.312149"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOTE: Executing action 'table.loadTable'.\n",
+      "NOTE: Action 'table.loadTable' used (Total process time):\n",
+      "NOTE:       real time               0.000922 seconds\n",
+      "NOTE:       cpu time                0.000905 seconds (98.16%)\n",
+      "NOTE:       total nodes             1 (16 cores)\n",
+      "NOTE:       total memory            62.67G\n",
+      "NOTE:       memory                  672.59K (0.00%)\n",
+      "NOTE: Executing action 'simple.numRows'.\n",
+      "NOTE: Action 'simple.numRows' used (Total process time):\n",
+      "NOTE:       real time               0.000167 seconds\n",
+      "NOTE:       cpu time                0.201217 seconds (120489.22%)\n",
+      "NOTE:       total nodes             1 (16 cores)\n",
+      "NOTE:       total memory            62.67G\n",
+      "NOTE:       memory                  0.00K (0.00%)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: The file or path 'HMEQ_TEST' is not available in the file system.\n",
+      "ERROR: Table 'HMEQ_TEST' could not be loaded.\n",
+      "ERROR: Failure opening table 'HMEQ_TEST': A table could not be loaded.\n",
+      "ERROR: The action stopped due to errors.\n"
+     ]
+    },
+    {
+     "ename": "SWATError",
+     "evalue": "A table could not be loaded.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mSWATError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-6d211b3687ba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcastbl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescribe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/swat/cas/table.py\u001b[0m in \u001b[0;36mdescribe\u001b[0;34m(self, percentiles, include, exclude, stats)\u001b[0m\n\u001b[1;32m   3985\u001b[0m         '''\n\u001b[1;32m   3986\u001b[0m         \u001b[0mcategories\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3987\u001b[0;31m         \u001b[0mnumrows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_numrows\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3988\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3989\u001b[0m         \u001b[0;31m# Auto-specify all numeric or all character\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/swat/utils/decorators.py\u001b[0m in \u001b[0;36m__get__\u001b[0;34m(self, obj, type)\u001b[0m\n\u001b[1;32m     54\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mexc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/swat/cas/table.py\u001b[0m in \u001b[0;36m_numrows\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   2404\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_numrows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2405\u001b[0m         \u001b[0;34m''' Return number of rows in the table '''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2406\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexclude\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'groupby'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_retrieve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'simple.numrows'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'numrows'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2407\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2408\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__len__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/swat/cas/table.py\u001b[0m in \u001b[0;36m_retrieve\u001b[0;34m(self, _name_, **kwargs)\u001b[0m\n\u001b[1;32m   2136\u001b[0m         \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mretrieve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_name_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_apptag\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'UI'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_messagelevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'error'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2137\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseverity\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2138\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mSWATError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2139\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2140\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mSWATError\u001b[0m: A table could not be loaded."
+     ]
     }
    ],
    "source": [
