--- a/R_snippets/R_Kmeans_simple_clustering.ipynb
+++ b/R_snippets/R_Kmeans_simple_clustering.ipynb
@@ -16,9 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SWAT 1.6.3\n",
+      "Registered S3 methods overwritten by 'ggplot2':\n",
+      "  method         from \n",
+      "  [.quosures     rlang\n",
+      "  c.quosures     rlang\n",
+      "  print.quosures rlang\n"
+     ]
+    }
+   ],
    "source": [
     "library(swat)\n",
     "library(ggplot2)"
@@ -33,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +96,7 @@
     }
    ],
    "source": [
-    "#Sys.setenv(CAS_CLIENT_SSL_CA_LIST = \"/opt/viyacerts/trustedcerts.pem\")\n",
+    "Sys.setenv(CAS_CLIENT_SSL_CA_LIST = \"/opt/sas/viya/config/etc/SASSecurityCertificateFramework/cacerts/trustedcerts.pem\")\n",
     "conn <- CAS('frasepviya35smp.cloud.com', 5570)\n",
     "\n",
     "# Activate session parameters if necessary\n",
@@ -96,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
