--- a/python_snippets/PandaCasIntegration_v2.ipynb
+++ b/python_snippets/PandaCasIntegration_v2.ipynb
@@ -54,18 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cashost='frasepviya35smp'\n",
+    "cashost='frasepviya35smp.cloud.com'\n",
     "casport=5570\n",
     "sess = swat.CAS(cashost, casport)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
       "text/html": [
        "<div class=\"cas-results-key\"><b>&#167; About</b></div>\n",
        "<div class=\"cas-results-body\">\n",
-       "<div>{'CAS': 'Cloud Analytic Services', 'Version': '3.05', 'VersionLong': 'V.03.05M0P11112019', 'Copyright': 'Copyright © 2014-2018 SAS Institute Inc. All Rights Reserved.', 'ServerTime': '2021-09-14T07:01:10Z', 'System': {'Hostname': 'frasepviya35smp.cloud.com', 'OS Name': 'Linux', 'OS Family': 'LIN X64', 'OS Release': '3.10.0-1160.31.1.el7.x86_64', 'OS Version': '#1 SMP Thu Jun 10 13:32:12 UTC 2021', 'Model Number': 'x86_64', 'Linux Distribution': 'CentOS Linux release 7.9.2009 (Core)'}, 'license': {'site': 'viya35_25May2021', 'siteNum': 70180938, 'expires': '25May2022:00:00:00', 'gracePeriod': 45, 'warningPeriod': 45}}</div>\n",
+       "<div>{'CAS': 'Cloud Analytic Services', 'Version': '3.05', 'VersionLong': 'V.03.05M0P11112019', 'Copyright': 'Copyright © 2014-2018 SAS Institute Inc. All Rights Reserved.', 'ServerTime': '2021-10-01T11:52:28Z', 'System': {'Hostname': 'frasepviya35smp.cloud.com', 'OS Name': 'Linux', 'OS Family': 'LIN X64', 'OS Release': '3.10.0-1160.el7.x86_64', 'OS Version': '#1 SMP Tue Aug 18 14:50:17 EDT 2020', 'Model Number': 'x86_64', 'Linux Distribution': 'Red Hat Enterprise Linux Server release 7.9 (Maipo)'}, 'license': {'site': 'viya35_25May2021', 'siteNum': 70180938, 'expires': '25May2022:00:00:00', 'gracePeriod': 45, 'warningPeriod': 45}}</div>\n",
        "</div>\n",
        "<div class=\"cas-results-key\"><hr/><b>&#167; server</b></div>\n",
        "<div class=\"cas-results-body\">\n",
@@ -148,7 +148,7 @@
        "      <td>0</td>\n",
        "      <td>frasepviya35smp.cloud.com</td>\n",
        "      <td>controller</td>\n",
-       "      <td>3.004</td>\n",
+       "      <td>3.262</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -157,7 +157,7 @@
        "</div>\n",
        "</div>\n",
        "<div class=\"cas-output-area\"></div>\n",
-       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.000659s</span> &#183; <span class=\"cas-user\">user 0.000472s</span> &#183; <span class=\"cas-sys\">sys 0.000152s</span> &#183; <span class=\"cas-memory\">mem 0.304MB</span></small></p>"
+       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.00085s</span> &#183; <span class=\"cas-user\">user 0.00081s</span> &#183; <span class=\"cas-memory\">mem 0.323MB</span></small></p>"
       ],
       "text/plain": [
        "[About]\n",
@@ -166,14 +166,14 @@
        "  'Version': '3.05',\n",
        "  'VersionLong': 'V.03.05M0P11112019',\n",
        "  'Copyright': 'Copyright © 2014-2018 SAS Institute Inc. All Rights Reserved.',\n",
-       "  'ServerTime': '2021-09-14T07:01:10Z',\n",
+       "  'ServerTime': '2021-10-01T11:52:28Z',\n",
        "  'System': {'Hostname': 'frasepviya35smp.cloud.com',\n",
        "   'OS Name': 'Linux',\n",
        "   'OS Family': 'LIN X64',\n",
-       "   'OS Release': '3.10.0-1160.31.1.el7.x86_64',\n",
-       "   'OS Version': '#1 SMP Thu Jun 10 13:32:12 UTC 2021',\n",
+       "   'OS Release': '3.10.0-1160.el7.x86_64',\n",
+       "   'OS Version': '#1 SMP Tue Aug 18 14:50:17 EDT 2020',\n",
        "   'Model Number': 'x86_64',\n",
-       "   'Linux Distribution': 'CentOS Linux release 7.9.2009 (Core)'},\n",
+       "   'Linux Distribution': 'Red Hat Enterprise Linux Server release 7.9 (Maipo)'},\n",
        "  'license': {'site': 'viya35_25May2021',\n",
        "   'siteNum': 70180938,\n",
        "   'expires': '25May2022:00:00:00',\n",
@@ -192,12 +192,12 @@
        " Node Status\n",
        " \n",
        "                         name        role  uptime  running  stalled\n",
-       " 0  frasepviya35smp.cloud.com  controller   3.004        0        0\n",
+       " 0  frasepviya35smp.cloud.com  controller   3.262        0        0\n",
        "\n",
-       "+ Elapsed: 0.000659s, user: 0.000472s, sys: 0.000152s, mem: 0.304mb"
+       "+ Elapsed: 0.00085s, user: 0.00081s, mem: 0.323mb"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,27 +208,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERROR: The table MYTAB already exists in caslib CASUSER(viyademo01).\n",
-      "ERROR: The action stopped due to errors.\n"
-     ]
-    },
-    {
-     "ename": "SWATError",
-     "evalue": "The action was not successful.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mSWATError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-4f497d984467>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmytab\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupload_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'https://raw.githubusercontent.com/FBosler/you-datascientist/master/happiness_with_continent.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcasout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'mytab'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/swat/cas/connection.py\u001b[0m in \u001b[0;36mupload_file\u001b[0;34m(self, data, importoptions, casout, **kwargs)\u001b[0m\n\u001b[1;32m   1750\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1751\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseverity\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1752\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mSWATError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1753\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1754\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'casTable'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mSWATError\u001b[0m: The action was not successful."
+      "NOTE: Cloud Analytic Services made the uploaded file available as table MYTAB in caslib CASUSER(viyademo01).\n",
+      "NOTE: The table MYTAB has been created in caslib CASUSER(viyademo01) from binary data uploaded to Cloud Analytic Services.\n"
      ]
     }
    ],
@@ -245,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +267,6 @@
        "      <th title=\"Generosity\">Generosity</th>\n",
        "      <th title=\"Perceptions of corruption\">Perceptions of corruption</th>\n",
        "      <th title=\"Positive affect\">Positive affect</th>\n",
-       "      <th title=\"...\">...</th>\n",
        "      <th title=\"GINI index (World Bank estimate), average 2000-16\">GINI index (World Bank estimate), average 2000-16</th>\n",
        "      <th title=\"gini of household income reported in Gallup, by wp5-year\">gini of household income reported in Gallup, by wp5-year</th>\n",
        "      <th title=\"Most people can be trusted, Gallup\">Most people can be trusted, Gallup</th>\n",
@@ -305,7 +292,6 @@
        "      <td>0.177889</td>\n",
        "      <td>0.881686</td>\n",
        "      <td>0.517637</td>\n",
-       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -329,7 +315,6 @@
        "      <td>0.200178</td>\n",
        "      <td>0.850035</td>\n",
        "      <td>0.583926</td>\n",
-       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.441906</td>\n",
        "      <td>0.286315</td>\n",
@@ -353,7 +338,6 @@
        "      <td>0.134353</td>\n",
        "      <td>0.706766</td>\n",
        "      <td>0.618265</td>\n",
-       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.327318</td>\n",
        "      <td>0.275833</td>\n",
@@ -377,7 +361,6 @@
        "      <td>0.172137</td>\n",
        "      <td>0.731109</td>\n",
        "      <td>0.611387</td>\n",
-       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.336764</td>\n",
        "      <td>NaN</td>\n",
@@ -401,7 +384,6 @@
        "      <td>0.244273</td>\n",
        "      <td>0.775620</td>\n",
        "      <td>0.710385</td>\n",
-       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.344540</td>\n",
        "      <td>NaN</td>\n",
@@ -415,7 +397,6 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 27 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -429,7 +410,7 @@
        "4  Afghanistan  2012.0     3.782938            7.517126        0.520637                         52.240002                      0.530935    0.244273                   0.775620         0.710385         0.267919                           0.435440           -1.842996         -1.404078                                      1.798283                                           0.475367                               NaN                                                NaN                                           0.344540                                        NaN                                                                                                                                              NaN                                              NaN                                                                                                      Asia"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3863,7 +3844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
