--- a/R_snippets/R_Kmeans_simple_clustering.ipynb
+++ b/R_snippets/R_Kmeans_simple_clustering.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,110 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "53016 bytes"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'data.frame':\t150 obs. of  8 variables:\n",
+      "Formal class 'casDataFrame' [package \"swat\"] with 15 slots\n",
+      "  ..@ .Data      :List of 8\n",
+      "  .. ..$ : num  5.1 4.9 4.7 4.6 5 5.4 4.6 5 4.4 4.9 ...\n",
+      "  .. ..$ : num  3.5 3 3.2 3.1 3.6 3.9 3.4 3.4 2.9 3.1 ...\n",
+      "  .. ..$ : num  1.4 1.4 1.3 1.5 1.4 1.7 1.4 1.5 1.4 1.5 ...\n",
+      "  .. ..$ : num  0.2 0.2 0.2 0.2 0.2 0.4 0.3 0.2 0.2 0.1 ...\n",
+      "  .. ..$ : chr  \"setosa\" \"setosa\" \"setosa\" \"setosa\" ...\n",
+      "  .. ..$ : num  2 2 2 2 2 2 2 2 2 2 ...\n",
+      "  .. ..$ : num  0.147 0.438 0.412 0.519 0.198 ...\n",
+      "  .. ..$ : num  0.231 0.975 0.633 0.884 0.425 ...\n",
+      "  ..@ name       : chr \"_STANDARDIZED_DISTANCE_\"\n",
+      "  ..@ label      : chr \"Selected Rows from Table KCLUSOUTPUTSCORE\"\n",
+      "  ..@ title      : chr \"Selected Rows from Table KCLUSOUTPUTSCORE\"\n",
+      "  ..@ attrs      :List of 3\n",
+      "  .. ..$ Action    : chr \"fetch\"\n",
+      "  .. ..$ Actionset : chr \"table\"\n",
+      "  .. ..$ CreateTime: num 1.95e+09\n",
+      "  ..@ col.labels : chr  \"\" \"\" \"\" \"\" ...\n",
+      "  ..@ col.formats: chr  \"\" \"\" \"\" \"\" ...\n",
+      "  ..@ col.attrs  : list()\n",
+      "  ..@ col.sizes  :List of 16\n",
+      "  .. ..$ : num 1\n",
+      "  .. ..$ : int 1\n",
+      "  .. ..$ : num 1\n",
+      "  .. ..$ : int 1\n",
+      "  .. ..$ : num 1\n",
+      "  .. ..$ : int 1\n",
+      "  .. ..$ : num 1\n",
+      "  .. ..$ : int 1\n",
+      "  .. ..$ : num 1\n",
+      "  .. ..$ : int 1\n",
+      "  .. ..$ : num 1\n",
+      "  .. ..$ : int 1\n",
+      "  .. ..$ : num 1\n",
+      "  .. ..$ : int 1\n",
+      "  .. ..$ : num 1\n",
+      "  .. ..$ : int 1\n",
+      "  ..@ col.types  : chr  \"double\" \"double\" \"double\" \"double\" ...\n",
+      "  ..@ col.widths : int  8 8 8 8 10 8 8 8\n",
+      "  ..@ df         :'data.frame':\t150 obs. of  8 variables:\n",
+      "Formal class 'data.frame' [package \"\"] with 4 slots\n",
+      "  .. .. ..@ .Data    :List of 8\n",
+      "  .. .. .. ..$ : num  5.1 4.9 4.7 4.6 5 5.4 4.6 5 4.4 4.9 ...\n",
+      "  .. .. .. ..$ : num  3.5 3 3.2 3.1 3.6 3.9 3.4 3.4 2.9 3.1 ...\n",
+      "  .. .. .. ..$ : num  1.4 1.4 1.3 1.5 1.4 1.7 1.4 1.5 1.4 1.5 ...\n",
+      "  .. .. .. ..$ : num  0.2 0.2 0.2 0.2 0.2 0.4 0.3 0.2 0.2 0.1 ...\n",
+      "  .. .. .. ..$ : chr  \"setosa\" \"setosa\" \"setosa\" \"setosa\" ...\n",
+      "  .. .. .. ..$ : num  2 2 2 2 2 2 2 2 2 2 ...\n",
+      "  .. .. .. ..$ : num  0.147 0.438 0.412 0.519 0.198 ...\n",
+      "  .. .. .. ..$ : num  0.231 0.975 0.633 0.884 0.425 ...\n",
+      "  .. .. ..@ names    : chr  \"Sepal.Length\" \"Sepal.Width\" \"Petal.Length\" \"Petal.Width\" ...\n",
+      "  .. .. ..@ row.names: int  1 2 3 4 5 6 7 8 9 10 ...\n",
+      "  .. .. ..@ .S3Class : chr \"data.frame\"\n",
+      "  ..@ names      : chr  \"Sepal.Length\" \"Sepal.Width\" \"Petal.Length\" \"Petal.Width\" ...\n",
+      "  ..@ row.names  : chr  \"1\" \"2\" \"3\" \"4\" ...\n",
+      "  ..@ .S3Class   : chr \"data.frame\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "object.size(dfR)\n",
+    "str(dfR)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27312 bytes"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dfR_pure <- to.data.frame(dfR)\n",
+    "object.size(dfR_pure)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
