--- a/R_snippets/R_Swat_simple_notebook.ipynb
+++ b/R_snippets/R_Swat_simple_notebook.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "SWAT 1.6.2\n"
+      "SWAT 1.6.3\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,6 +82,8 @@
    ],
    "source": [
     "#Sys.setenv(CAS_CLIENT_SSL_CA_LIST = \"/opt/viyacerts/trustedcerts.pem\")\n",
+    "Sys.setenv(CAS_CLIENT_SSL_CA_LIST = \"/opt/sas/viya/config/etc/SASSecurityCertificateFramework/cacerts/trustedcerts.pem\")\n",
+    "\n",
     "conn <- CAS('frasepviya35smp.cloud.com', 5570)\n",
     "\n",
     "# Activate session parameters if necessary\n",
@@ -98,31 +100,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "NOTE: No tables are available in caslib Samples of Cloud Analytic Services.\n"
+     ]
+    },
+    {
      "data": {
-      "text/html": [
-       "<ol class=list-inline>\n",
-       "\t<li>'PROMO_EFFECTIVENESS_X_EFFECTS_2'</li>\n",
-       "\t<li>'RAND_RETAILDEMO'</li>\n",
-       "</ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 'PROMO\\_EFFECTIVENESS\\_X\\_EFFECTS\\_2'\n",
-       "\\item 'RAND\\_RETAILDEMO'\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 'PROMO_EFFECTIVENESS_X_EFFECTS_2'\n",
-       "2. 'RAND_RETAILDEMO'\n",
-       "\n",
-       "\n"
-      ],
       "text/plain": [
-       "[1] \"PROMO_EFFECTIVENESS_X_EFFECTS_2\" \"RAND_RETAILDEMO\"                "
+       "NULL"
       ]
      },
      "metadata": {},
