--- a/python_snippets/HMEQ_Train_RegisterMM_Astore_GBM_Model.ipynb
+++ b/python_snippets/HMEQ_Train_RegisterMM_Astore_GBM_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,38 +31,38 @@
      "text": [
       "NOTE: 'Public' is now the active caslib.\n",
       "NOTE: Action 'sessionProp.setSessOpt' used (Total process time):\n",
-      "NOTE:       real time               0.000270 seconds\n",
-      "NOTE:       cpu time                0.000256 seconds (94.81%)\n",
+      "NOTE:       real time               0.000343 seconds\n",
+      "NOTE:       cpu time                0.000320 seconds (93.29%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
-      "NOTE:       total memory            62.67G\n",
-      "NOTE:       memory                  280.44K (0.00%)\n"
+      "NOTE:       total memory            125.75G\n",
+      "NOTE:       memory                  262.06K (0.00%)\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<div class=\"cas-output-area\"></div>\n",
-       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.00027s</span> &#183; <span class=\"cas-user\">user 0.000154s</span> &#183; <span class=\"cas-sys\">sys 0.000102s</span> &#183; <span class=\"cas-memory\">mem 0.274MB</span></small></p>"
+       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.000343s</span> &#183; <span class=\"cas-user\">user 0.00032s</span> &#183; <span class=\"cas-memory\">mem 0.256MB</span></small></p>"
       ],
       "text/plain": [
-       "+ Elapsed: 0.00027s, user: 0.000154s, sys: 0.000102s, mem: 0.274mb"
+       "+ Elapsed: 0.000343s, user: 0.00032s, mem: 0.256mb"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "os.environ['CAS_CLIENT_SSL_CA_LIST'] = '/opt/sas/viya/config/etc/SASSecurityCertificateFramework/cacerts/trustedcerts.pem'\n",
-    "s = swat.CAS('frasepviya35smp', 5570)\n",
+    "s = swat.CAS('frasepviya35smp.cloud.com', 5570)\n",
     "# Define default session caslib\n",
     "s.sessionprop.setsessopt(caslib='Public',metrics='true')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "(2381, 13)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "max       1.000000  89000.000000  369874.000000  855909.000000    41.000000    10.000000    10.000000  1168.233561    14.000000    71.000000   143.949605"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -289,11 +289,11 @@
       "NOTE: Executing action 'builtins.loadActionSet'.\n",
       "NOTE: Added action set 'decisionTree'.\n",
       "NOTE: Action 'builtins.loadActionSet' used (Total process time):\n",
-      "NOTE:       real time               0.011006 seconds\n",
-      "NOTE:       cpu time                0.002266 seconds (20.59%)\n",
+      "NOTE:       real time               0.388797 seconds\n",
+      "NOTE:       cpu time                0.003758 seconds (0.97%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
-      "NOTE:       total memory            62.67G\n",
-      "NOTE:       memory                  245.31K (0.00%)\n"
+      "NOTE:       total memory            125.75G\n",
+      "NOTE:       memory                  226.94K (0.00%)\n"
      ]
     },
     {
@@ -304,17 +304,17 @@
        "<div>decisionTree</div>\n",
        "</div>\n",
        "<div class=\"cas-output-area\"></div>\n",
-       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.011s</span> &#183; <span class=\"cas-user\">user 0.0014s</span> &#183; <span class=\"cas-sys\">sys 0.00087s</span> &#183; <span class=\"cas-memory\">mem 0.24MB</span></small></p>"
+       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.389s</span> &#183; <span class=\"cas-user\">user 0.00323s</span> &#183; <span class=\"cas-sys\">sys 0.000533s</span> &#183; <span class=\"cas-memory\">mem 0.222MB</span></small></p>"
       ],
       "text/plain": [
        "[actionset]\n",
        "\n",
        " 'decisionTree'\n",
        "\n",
-       "+ Elapsed: 0.011s, user: 0.0014s, sys: 0.00087s, mem: 0.24mb"
+       "+ Elapsed: 0.389s, user: 0.00323s, sys: 0.000533s, mem: 0.222mb"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -333,13 +333,13 @@
      "output_type": "stream",
      "text": [
       "NOTE: Executing action 'decisionTree.gbtreeTrain'.\n",
-      "NOTE: 908811 bytes were written to the table \"gradboost_astore\" in the caslib \"Public\".\n",
+      "NOTE: 932467 bytes were written to the table \"gradboost_astore\" in the caslib \"Public\".\n",
       "NOTE: Action 'decisionTree.gbtreeTrain' used (Total process time):\n",
-      "NOTE:       real time               0.399389 seconds\n",
-      "NOTE:       cpu time                0.525802 seconds (131.65%)\n",
+      "NOTE:       real time               0.684806 seconds\n",
+      "NOTE:       cpu time                0.458381 seconds (66.94%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
-      "NOTE:       total memory            62.67G\n",
-      "NOTE:       memory                  64.74M (0.10%)\n"
+      "NOTE:       total memory            125.75G\n",
+      "NOTE:       memory                  64.72M (0.05%)\n"
      ]
     }
    ],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -372,11 +372,11 @@
       "NOTE: Executing action 'decisionTree.forestTrain'.\n",
       "NOTE: 12834419 bytes were written to the table \"forest_astore\" in the caslib \"Public\".\n",
       "NOTE: Action 'decisionTree.forestTrain' used (Total process time):\n",
-      "NOTE:       real time               1.023330 seconds\n",
-      "NOTE:       cpu time                4.561973 seconds (445.80%)\n",
+      "NOTE:       real time               0.835494 seconds\n",
+      "NOTE:       cpu time                3.665504 seconds (438.72%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
-      "NOTE:       total memory            62.67G\n",
-      "NOTE:       memory                  170.63M (0.27%)\n"
+      "NOTE:       total memory            125.75G\n",
+      "NOTE:       memory                  170.60M (0.13%)\n"
      ]
     }
    ],
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -421,46 +421,46 @@
       "NOTE: Executing action 'builtins.loadActionSet'.\n",
       "NOTE: Added action set 'astore'.\n",
       "NOTE: Action 'builtins.loadActionSet' used (Total process time):\n",
-      "NOTE:       real time               0.000823 seconds\n",
-      "NOTE:       cpu time                0.000811 seconds (98.54%)\n",
+      "NOTE:       real time               0.069495 seconds\n",
+      "NOTE:       cpu time                0.001479 seconds (2.13%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
-      "NOTE:       total memory            62.67G\n",
-      "NOTE:       memory                  232.53K (0.00%)\n",
+      "NOTE:       total memory            125.75G\n",
+      "NOTE:       memory                  210.81K (0.00%)\n",
       "NOTE: Executing action 'astore.describe'.\n",
       "NOTE: Action 'astore.describe' used (Total process time):\n",
-      "NOTE:       real time               0.171160 seconds\n",
-      "NOTE:       cpu time                0.171107 seconds (99.97%)\n",
+      "NOTE:       real time               0.412548 seconds\n",
+      "NOTE:       cpu time                0.138908 seconds (33.67%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
-      "NOTE:       total memory            62.67G\n",
+      "NOTE:       total memory            125.75G\n",
       "NOTE:       memory                  6.86M (0.01%)\n",
       "NOTE: Executing action 'table.save'.\n",
-      "NOTE: Cloud Analytic Services saved the file _561A0CC5215D4468BCFF0D74D.sashdat in caslib ModelStore.\n",
+      "NOTE: Cloud Analytic Services saved the file _23C04832DE084716BA38B08A7.sashdat in caslib ModelStore.\n",
       "NOTE: Action 'table.save' used (Total process time):\n",
-      "NOTE:       real time               0.066812 seconds\n",
-      "NOTE:       cpu time                0.024052 seconds (36.00%)\n",
+      "NOTE:       real time               0.247750 seconds\n",
+      "NOTE:       cpu time                0.015580 seconds (6.29%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
-      "NOTE:       total memory            62.67G\n",
-      "NOTE:       memory                  16.54M (0.03%)\n"
+      "NOTE:       total memory            125.75G\n",
+      "NOTE:       memory                  16.54M (0.01%)\n"
      ]
     }
    ],
    "source": [
-    "with Session('frasepviya35smp', 'viyademo01', 'demopw'):\n",
+    "with Session('frasepviya35smp.cloud.com', 'viyademo01', 'demopw'):\n",
     "    model = register_model(astore, 'Random forest model', 'HMEQ_Modeling', force=True) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_code_file  = open(\"/home/viyademo01/FrasepProjects/python_snippets/HMEQ_Train_RegisterMM_Astore_GBM_Model.ipynb\", \"r\")"
+    "training_code_file  = open(\"/home/viyademo01/my_git/python_snippets/HMEQ_Train_RegisterMM_Astore_GBM_Model.ipynb\", \"r\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -470,31 +470,31 @@
       "NOTE: Executing action 'builtins.loadActionSet'.\n",
       "NOTE: Added action set 'astore'.\n",
       "NOTE: Action 'builtins.loadActionSet' used (Total process time):\n",
-      "NOTE:       real time               0.000425 seconds\n",
-      "NOTE:       cpu time                0.000361 seconds (84.94%)\n",
+      "NOTE:       real time               0.000301 seconds\n",
+      "NOTE:       cpu time                0.000274 seconds (91.03%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
-      "NOTE:       total memory            62.67G\n",
-      "NOTE:       memory                  228.19K (0.00%)\n",
+      "NOTE:       total memory            125.75G\n",
+      "NOTE:       memory                  209.81K (0.00%)\n",
       "NOTE: Executing action 'astore.describe'.\n",
       "NOTE: Action 'astore.describe' used (Total process time):\n",
-      "NOTE:       real time               0.144745 seconds\n",
-      "NOTE:       cpu time                0.144717 seconds (99.98%)\n",
+      "NOTE:       real time               0.136749 seconds\n",
+      "NOTE:       cpu time                0.136726 seconds (99.98%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
-      "NOTE:       total memory            62.67G\n",
-      "NOTE:       memory                  6.89M (0.01%)\n",
+      "NOTE:       total memory            125.75G\n",
+      "NOTE:       memory                  6.86M (0.01%)\n",
       "NOTE: Executing action 'table.save'.\n",
-      "NOTE: Cloud Analytic Services saved the file _6AC74FFF1E394B96A38DD0BA3.sashdat in caslib ModelStore.\n",
+      "NOTE: Cloud Analytic Services saved the file _92C6C2AFE99945369754C8C7E.sashdat in caslib ModelStore.\n",
       "NOTE: Action 'table.save' used (Total process time):\n",
-      "NOTE:       real time               0.064018 seconds\n",
-      "NOTE:       cpu time                0.018753 seconds (29.29%)\n",
+      "NOTE:       real time               0.229985 seconds\n",
+      "NOTE:       cpu time                0.015226 seconds (6.62%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
-      "NOTE:       total memory            62.67G\n",
-      "NOTE:       memory                  16.56M (0.03%)\n"
+      "NOTE:       total memory            125.75G\n",
+      "NOTE:       memory                  16.54M (0.01%)\n"
      ]
     }
    ],
    "source": [
-    "with Session('frasepviya35smp', 'viyademo01', 'demopw'):\n",
+    "with Session('frasepviya35smp.cloud.com', 'viyademo01', 'demopw'):\n",
     "    model = register_model(astore, 'Random forest model', 'HMEQ_Modeling', force=True)\n",
     "    model_repository.add_model_content(model, file=training_code_file, name='traning_code.ipynb')"
    ]
@@ -508,11 +508,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with Session('frasepviya35smp', 'viyademo01', 'demopw'):\n",
+    "with Session('frasepviya35smp.cloud.com', 'viyademo01', 'demopw'):\n",
     "    module = publish_model(model, 'maslocal',replace=1)"
    ]
   },
@@ -525,7 +525,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with Session('frasepviya35smp.cloud.com', 'viyademo01', 'demopw'):\n",
+    "    response = module.score(LOAN=10,MORTDUE=1,VALUE=1,YOJ=10,DEROG=1,DELINQ=10,CLAGE=1,NINQ=1,CLNO=1,DEBTINC=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -534,19 +544,18 @@
        "(0.5440674603174604, 0.4559325396825396, '1', '')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "response = module.score(LOAN=10,MORTDUE=1,VALUE=1,YOJ=10,DEROG=1,DELINQ=10,CLAGE=1,NINQ=1,CLNO=1,DEBTINC=1)\n",
     "response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
